--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,15 +1,17 @@
 name: GitHub Actions Demo
 on: 
  push:
+  branches:
+   - main
   tags:
-    - v*
+    - v1.0.0
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - name: Exit if not on master branch
-        if: endsWith(github.ref, 'main') == false
-        run: exit -1
+     # - name: Exit if not on master branch
+       # if: endsWith(github.ref, 'main') == false
+       # run: exit -1
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
