--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,10 +1,10 @@
 name: GitHub Actions Demo
 on: 
- push:
+ release:
   branches:
    - main
   tags:
-    - v1.0.2
+    - v1.0.1
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
