--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,17 +1,17 @@
 name: GitHub Actions Demo
 on: 
- release:
+ push:
  # branches:
  #  - mfernriv-patch-1
   tags:
     - v*
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Exit if not on master branch
-        if: endsWith(github.ref, 'main') == false
-        run: exit -1
+  main-only:
+   if: github.event.base_ref == 'refs/heads/main'
+   runs-on: ubuntu-latest
+   steps:
+      - name: 🎉
+        run: echo "Runnig in main branch"
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
